CloudFormation/trunk/WMP-Ecommerce-Containers/VPC-Ecomm.template
{
    "AWSTemplateFormatVersion": "2010-09-09", 
    "Description": "CloudFormation script for CUPS AWS Ecommerce environments, building virtual hardware.", 
    "Mappings": {
        "AWSAMI": {
            "ADMIN": {
                "AMI": "ami-672ce210"
            }, 
            "Centos": {
                "AMI": "ami-d1422ea6"
            }, 
            "NAT": {
                "AMI": "ami-cb7de3bc"
            }
        }, 
        "CUPSSubnetConfig": {
            "CAMFWALL": {
                "CIDR": "192.153.213.50/32"
            }, 
            "CAMINFRA": {
                "CIDR": "131.111.159.0/24"
            }, 
            "CAMPT": {
                "CIDR": "131.111.154.0/24"
            }, 
            "MANILLA1": {
                "CIDR": "121.97.34.10/32"
            }, 
            "MANILLA2": {
                "CIDR": "103.23.193.2/32"
            }, 
            "MANILLA3": {
                "CIDR": "121.97.40.34/32"
            },
			"MANILLA4": {
                "CIDR": "122.55.14.126/32"
            },
            "NY-1": {
                "CIDR": "38.122.225.74/32"
            }, 
            "NY-2": {
                "CIDR": "65.202.160.242/32"
            }, 
            "SINGAPORE": {
                "CIDR": "122.152.164.42/32"
            }, 
            "WIRELESS": {
                "CIDR": "192.153.213.50/32"
            }
        }, 
        "PrivateA": {
            "Environment1": {
                "CIDR": "10.10.29.64/27"
            }, 
            "Environment2": {
                "CIDR": "10.10.30.64/27"
            }, 
            "Environment3": {
                "CIDR": "10.10.31.64/27"
            }, 
            "Environment4": {
                "CIDR": "10.10.32.64/27"
            }, 
            "Environment5": {
                "CIDR": "10.10.33.64/27"
            }, 
            "Environment6": {
                "CIDR": "10.10.34.64/27"
            }, 
            "Environment7": {
                "CIDR": "10.10.35.64/27"
            }, 
            "Environment8": {
                "CIDR": "10.10.36.64/27"
            }
        }, 
        "PrivateB": {
            "Environment1": {
                "CIDR": "10.10.29.96/27"
            }, 
            "Environment2": {
                "CIDR": "10.10.30.96/27"
            }, 
            "Environment3": {
                "CIDR": "10.10.31.96/27"
            }, 
            "Environment4": {
                "CIDR": "10.10.32.96/27"
            }, 
            "Environment5": {
                "CIDR": "10.10.33.96/27"
            }, 
            "Environment6": {
                "CIDR": "10.10.34.96/27"
            }, 
            "Environment7": {
                "CIDR": "10.10.35.96/27"
            }, 
            "Environment8": {
                "CIDR": "10.10.36.96/27"
            }
        }, 
        "PrivateC": {
            "Environment1": {
                "CIDR": "10.10.29.128/27"
            }, 
            "Environment2": {
                "CIDR": "10.10.30.128/27"
            }, 
            "Environment3": {
                "CIDR": "10.10.31.128/27"
            }, 
            "Environment4": {
                "CIDR": "10.10.32.128/27"
            }, 
            "Environment5": {
                "CIDR": "10.10.33.128/27"
            }, 
            "Environment6": {
                "CIDR": "10.10.34.128/27"
            }, 
            "Environment7": {
                "CIDR": "10.10.35.128/27"
            }, 
            "Environment8": {
                "CIDR": "10.10.36.128/27"
            }
        }, 
        "PrivateD": {
            "Environment1": {
                "CIDR": "10.10.29.164/27"
            }, 
            "Environment2": {
                "CIDR": "10.10.30.164/27"
            }, 
            "Environment3": {
                "CIDR": "10.10.31.164/27"
            }, 
            "Environment4": {
                "CIDR": "10.10.32.164/27"
            }, 
            "Environment5": {
                "CIDR": "10.10.33.164/27"
            }, 
            "Environment6": {
                "CIDR": "10.10.34.164/27"
            }, 
            "Environment7": {
                "CIDR": "10.10.35.164/27"
            }, 
            "Environment8": {
                "CIDR": "10.10.36.164/27"
            }
        }, 
        "PublicA": {
            "Environment1": {
                "CIDR": "10.10.29.0/27"
            }, 
            "Environment2": {
                "CIDR": "10.10.30.0/27"
            }, 
            "Environment3": {
                "CIDR": "10.10.31.0/27"
            }, 
            "Environment4": {
                "CIDR": "10.10.32.0/27"
            }, 
            "Environment5": {
                "CIDR": "10.10.33.0/27"
            }, 
            "Environment6": {
                "CIDR": "10.10.34.0/27"
            }, 
            "Environment7": {
                "CIDR": "10.10.35.0/27"
            }, 
            "Environment8": {
                "CIDR": "10.10.36.0/27"
            }
        }, 
        "PublicB": {
            "Environment1": {
                "CIDR": "10.10.29.32/27"
            }, 
            "Environment2": {
                "CIDR": "10.10.30.32/27"
            }, 
            "Environment3": {
                "CIDR": "10.10.31.32/27"
            }, 
            "Environment4": {
                "CIDR": "10.10.32.32/27"
            }, 
            "Environment5": {
                "CIDR": "10.10.33.32/27"
            }, 
            "Environment6": {
                "CIDR": "10.10.34.32/27"
            }, 
            "Environment7": {
                "CIDR": "10.10.35.32/27"
            }, 
            "Environment8": {
                "CIDR": "10.10.36.32/27"
            }
        }, 
        "SubnetConfig": {
            "PrivateA": {
                "CIDR": "10.10.30.64/27"
            }, 
            "PrivateB": {
                "CIDR": "10.10.30.96/27"
            }, 
            "PrivateC": {
                "CIDR": "10.10.30.128/27"
            }, 
            "PrivateD": {
                "CIDR": "10.10.30.160/27"
            }, 
            "PublicA": {
                "CIDR": "10.10.30.0/27"
            }, 
            "PublicB": {
                "CIDR": "10.10.30.32/27"
            }, 
            "VPC": {
                "CIDR": "10.10.30.0/24"
            }
        }, 
        "VPC": {
            "Environment1": {
                "CIDR": "10.10.29.0/24"
            }, 
            "Environment2": {
                "CIDR": "10.10.30.0/24"
            }, 
            "Environment3": {
                "CIDR": "10.10.31.0/24"
            }, 
            "Environment4": {
                "CIDR": "10.10.32.0/24"
            }, 
            "Environment5": {
                "CIDR": "10.10.33.0/24"
            }, 
            "Environment6": {
                "CIDR": "10.10.34.0/24"
            }, 
            "Environment7": {
                "CIDR": "10.10.35.0/24"
            }, 
            "Environment8": {
                "CIDR": "10.10.36.0/24"
            }
        }
    }, 
    "Outputs": {
        "AdminSecurityGroup": {
            "Value": {
                "Ref": "AdminSecurityGroup"
            }
        }, 
        "DBSubnetA": {
            "Value": {
                "Ref": "DBSubnetA"
            }
        }, 
        "DBSubnetB": {
            "Value": {
                "Ref": "DBSubnetB"
            }
        }, 
        "IPBastionServerExternal": {
            "Description": "Konakart Bastion Server External IP", 
            "Value": {
                "Fn::GetAtt": [
                    "AdminServer", 
                    "PublicIp"
                ]
            }
        }, 
        "NATDeviceA": {
            "Value": {
                "Ref": "NATDeviceA"
            }
        }, 
        "NATDeviceB": {
            "Value": {
                "Ref": "NATDeviceB"
            }
        }, 
        "PrivateSubnetA": {
            "Value": {
                "Ref": "PrivateSubnetA"
            }
        }, 
        "PrivateSubnetB": {
            "Value": {
                "Ref": "PrivateSubnetB"
            }
        }, 
        "PublicSubnetA": {
            "Value": {
                "Ref": "PublicSubnetA"
            }
        }, 
        "PublicSubnetB": {
            "Value": {
                "Ref": "PublicSubnetB"
            }
        }, 
        "VPC": {
            "Value": {
                "Ref": "VPC"
            }
        }
    }, 
    "Parameters": {
        "CIDRRangeNumber": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "Identifier for CIDR range to use for this environment", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        }, 
        "Environment": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "Name of environment to be built", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        }, 
        "IamRole": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "Name of existing IAM Role for S3 access", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        }, 
        "KeyName": {
            "AllowedPattern": "[\\x20-\\x7E]*", 
            "ConstraintDescription": "can contain only ASCII characters.", 
            "Description": "Name of existing SSH Keypair", 
            "MaxLength": "255", 
            "MinLength": "1", 
            "Type": "String"
        }
    }, 
    "Resources": {
        "AdminIPAddress": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "Domain": "vpc", 
                "InstanceId": {
                    "Ref": "AdminServer"
                }
            }, 
            "Type": "AWS::EC2::EIP"
        }, 
        "AdminSecurityGroup": {
            "Properties": {
                "GroupDescription": "Defines allowed access to the Admin Bastion server", 
                "SecurityGroupEgress": [
                    {}
                ], 
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMFWALL", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    },
					{
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "MANILLA4", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    },
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "MANILLA3", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }, 
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "MANILLA2", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }, 
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "MANILLA1", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }, 
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMINFRA", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }, 
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "CUPSSubnetConfig", 
                                "CAMPT", 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "22", 
                        "IpProtocol": "tcp", 
                        "ToPort": "22"
                    }
                ], 
                "Tags": [
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SG"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Admin Server SG"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }, 
        "AdminServer": {
            "DependsOn": "AdminSecurityGroup", 
            "Properties": {
                "IamInstanceProfile": {
                    "Ref": "IamRole"
                }, 
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "Centos", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "m3.medium", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "AdminSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }, 
                "Tags": [
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "Bastion"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": {
                            "Fn::Join": [
                                " ", 
                                [
                                    "Ecommerce Bastion Server", 
                                    {
                                        "Ref": "Environment"
                                    }
                                ]
                            ]
                        }
                    }
                ], 
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "\n", 
                            [
                                "#!/bin/bash", 
                                "/usr/sbin/groupadd -g 506 wmpecommdev", 
                                "/usr/sbin/useradd -g wmpecommdev -c \"Ecommerce Developer account\" wmpecommdev", 
                                "cd /home/wmpecommdev", 
                                "/bin/mkdir .ssh", 
                                "echo 'ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCvloyc5wTv3UBFzG+3KHnT4x0ZMXEjxZkKpW0R5IbD+7qRWjpbyQOhhf2rMe6yVZ+V0plHBDqiZTPXntnWhPfQ9hRxF9Flf1TW+PQPdxZzXpDsXg2Ep1onMFF6fBFv8SdaK5+tfrCh144eUyPriygXcSjyhGJ8Rlw4p24yt3tBAi8rRUUdO13JB50lMvm+mQPpFQF9fIjZAIolCdwVCIbXMDgbYctkhN9p07MfCcknLIYO6OixB7TQN6eZg9MDksuiWyOOq+KHfa71THtX1yyBR9CtZFSQLbpCGMTJHIpSKR4nPUdWvjT7V9bPYjvPZOUhKQe3YsdvM84oFDsDmMLL wmpecommdev@puppet.aws.internal' >.ssh/authorized_keys", 
                                "/bin/chown -R wmpecommdev:wmpecommdev .ssh", 
                                "/bin/chmod 700 .ssh", 
                                "/bin/chmod 600 .ssh/authorized_keys", 
                                "/bin/mkdir /root/.aws", 
                                "echo \"[default]\" >>/root/.aws/config", 
                                "echo \"region = eu-west-1\" >>/root/.aws/config", 
                                "exit"
                            ]
                        ]
                    }
                }
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "DBSubnetA": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "PrivateC", 
                        {
                            "Ref": "CIDRRangeNumber"
                        }, 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce DB Subnet AZ A (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "DBSubnetB": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "PrivateD", 
                        {
                            "Ref": "CIDRRangeNumber"
                        }, 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce DB Subnet AZ B (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "GatewayAttachment": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }, 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::VPCGatewayAttachment"
        }, 
        "InternetGateway": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "IGW"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Internet Gateway"
                    }
                ]
            }, 
            "Type": "AWS::EC2::InternetGateway"
        }, 
        "NATDeviceA": {
            "DependsOn": "NATSecurityGroup", 
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "NAT", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "t1.micro", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "NATSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "NAT"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce NAT Device AZ=A"
                    }
                ]
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "NATDeviceB": {
            "DependsOn": "NATSecurityGroup", 
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "AWSAMI", 
                        "NAT", 
                        "AMI"
                    ]
                }, 
                "InstanceType": "t1.micro", 
                "KeyName": {
                    "Ref": "KeyName"
                }, 
                "SecurityGroupIds": [
                    {
                        "Ref": "NATSecurityGroup"
                    }
                ], 
                "SourceDestCheck": "false", 
                "SubnetId": {
                    "Ref": "PublicSubnetB"
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "NAT"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce NAT Device AZ=B"
                    }
                ]
            }, 
            "Type": "AWS::EC2::Instance"
        }, 
        "NATIPAddressA": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "Domain": "vpc", 
                "InstanceId": {
                    "Ref": "NATDeviceA"
                }
            }, 
            "Type": "AWS::EC2::EIP"
        }, 
        "NATIPAddressB": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "Domain": "vpc", 
                "InstanceId": {
                    "Ref": "NATDeviceB"
                }
            }, 
            "Type": "AWS::EC2::EIP"
        }, 
        "NATSecurityGroup": {
            "Properties": {
                "GroupDescription": "Enable AWS VPC access to the NAT device", 
                "SecurityGroupEgress": [
                    {
                        "CidrIp": "0.0.0.0/0", 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "VPC", 
                                {
                                    "Ref": "CIDRRangeNumber"
                                }, 
                                "CIDR"
                            ]
                        }, 
                        "FromPort": "1", 
                        "IpProtocol": "-1", 
                        "ToPort": "9999"
                    }
                ], 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SG"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce NAT SG"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::SecurityGroup"
        }, 
        "PrivateRouteA": {
            "DependsOn": "NATDeviceA", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "InstanceId": {
                    "Ref": "NATDeviceA"
                }, 
                "RouteTableId": {
                    "Ref": "PrivateRouteTableA"
                }
            }, 
            "Type": "AWS::EC2::Route"
        }, 
        "PrivateRouteB": {
            "DependsOn": "NATDeviceB", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "InstanceId": {
                    "Ref": "NATDeviceB"
                }, 
                "RouteTableId": {
                    "Ref": "PrivateRouteTableB"
                }
            }, 
            "Type": "AWS::EC2::Route"
        }, 
        "PrivateRouteTableA": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "RT"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Private routing table A"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::RouteTable"
        },
        "PrivateRouteTableB": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "RT"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Private routing table B"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::RouteTable"
        }, 
        "PrivateSubnetA": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "PrivateA", 
                        {
                            "Ref": "CIDRRangeNumber"
                        }, 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce App Subnet AZ A (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PrivateSubnetB": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "PrivateB", 
                        {
                            "Ref": "CIDRRangeNumber"
                        }, 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce App Subnet AZ B (Private)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PublicRoute": {
            "DependsOn": "GatewayAttachment", 
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0", 
                "GatewayId": {
                    "Ref": "InternetGateway"
                }, 
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }, 
            "Type": "AWS::EC2::Route"
        }, 
        "PublicRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "RT"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Public routing table"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::RouteTable"
        }, 
        "PublicSubnetA": {
            "Properties": {
                "AvailabilityZone": "eu-west-1a", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "PublicA", 
                        {
                            "Ref": "CIDRRangeNumber"
                        }, 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Web Subnet AZ A (Public)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "PublicSubnetB": {
            "Properties": {
                "AvailabilityZone": "eu-west-1b", 
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "PublicB", 
                        {
                            "Ref": "CIDRRangeNumber"
                        }, 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "SN"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": "Ecommerce Web Subnet AZ B (Public)"
                    }
                ], 
                "VpcId": {
                    "Ref": "VPC"
                }
            }, 
            "Type": "AWS::EC2::Subnet"
        }, 
        "SubnetRouteTableAssociationPrivA": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableA"
                }, 
                "SubnetId": {
                    "Ref": "PrivateSubnetA"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPrivB": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableB"
                }, 
                "SubnetId": {
                    "Ref": "PrivateSubnetB"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPrivC": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableA"
                }, 
                "SubnetId": {
                    "Ref": "DBSubnetA"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPrivD": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PrivateRouteTableB"
                }, 
                "SubnetId": {
                    "Ref": "DBSubnetB"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPubA": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PublicSubnetA"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "SubnetRouteTableAssociationPubB": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }, 
                "SubnetId": {
                    "Ref": "PublicSubnetB"
                }
            }, 
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }, 
        "VPC": {
            "Properties": {
                "CidrBlock": {
                    "Fn::FindInMap": [
                        "VPC", 
                        {
                            "Ref": "CIDRRangeNumber"
                        }, 
                        "CIDR"
                    ]
                }, 
                "Tags": [
                    {
                        "Key": "Application", 
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }, 
                    {
                        "Key": "Platform", 
                        "Value": "Ecomm"
                    }, 
                    {
                        "Key": "Business", 
                        "Value": "ELT"
                    }, 
                    {
                        "Key": "Environment", 
                        "Value": {
                            "Ref": "Environment"
                        }
                    }, 
                    {
                        "Key": "Owner", 
                        "Value": "Tanya Traynor-Vince"
                    }, 
                    {
                        "Key": "Role", 
                        "Value": "VPC"
                    }, 
                    {
                        "Key": "Name", 
                        "Value": {
                            "Fn::Join": [
                                " ", 
                                [
                                    "Ecommerce VPC", 
                                    {
                                        "Ref": "Environment"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }, 
            "Type": "AWS::EC2::VPC"
        }
    }
}
